[workspace]
members = [
    "bin/ream", 
    "crates/common/consensus", 
    "crates/networking/discv5", 
    "crates/networking/p2p", 
    "crates/rpc", 
    "crates/runtime", 
    "crates/storage",
    "crates/common/phase0" 
]

default-members = ["bin/ream"]
resolver = "2"

[workspace.package]
authors = ["https://github.com/ReamLabs/ream/graphs/contributors"]
edition = "2021"
keywords = ["ethereum", "beam-chain", "blockchain", "consensus", "protocol", "ream"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReamLabs/ream"
rust-version = "1.81.0"
version = "0.1.0"

[workspace.dependencies]
alloy-primitives = { version = "0.8.15", features = ['serde'] }
clap = "4"
ethereum_ssz = "0.8.1"
ethereum_ssz_derive = "0.8.1"
rstest = "0.23.0"
serde = { version = '1.0.216', features = ['derive'] }
snap = "1.1.1"
ssz_types = "0.10.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tree_hash = "0.9.0"
tree_hash_derive = "0.9.0"
