[package]
name = "ream-executor"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
