[package]
name = "ream-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# ream dependencies
ream-executor = { workspace = true }
ream-discv5 = { workspace = true }

# misc
discv5 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-mplex = { workspace = true }
libp2p = { workspace = true, default-features = false, features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"] }
serde = { workspace = true }
tokio = { workspace = true }
